fix(notebook): T4 OOM fixes + findings from Colab test
- Fix total_mem → total_memory (PyTorch API change)
- Fix Audio display: add rate=24000 for PersonaPlex output
- Add os.path.exists checks before reading output files
- Add GPU VRAM warning (T4 insufficient, need L4+)
- Add OOM detection with clear error messages
- Document T4 failure: Killed by OOM after loading 16.7GB model
- Update results section with T4 findings

--- a/notebooks/personaplex_demo.ipynb
+++ b/notebooks/personaplex_demo.ipynb
@@ -24,12 +24,17 @@
     "\n",
     "**Proyecto:** PersonaPlex Callbot (Fase 1)\n",
     "\n",
-    "Este notebook prueba PersonaPlex en Google Colab con GPU T4.\n",
+    "Este notebook prueba PersonaPlex en Google Colab.\n",
+    "\n",
+    "### ⚠️ Requisitos de GPU:\n",
+    "- **T4 (free tier): NO funciona** — 15GB VRAM + 12GB RAM insuficiente. El proceso es `Killed` por OOM.\n",
+    "- **L4 o superior: Recomendado** — Necesitas Colab Pro o créditos de GPU.\n",
+    "- **A100: Ideal** — Es el hardware de referencia de NVIDIA.\n",
     "\n",
     "### Antes de empezar:\n",
     "1. ✅ Acepta la licencia del modelo: [nvidia/personaplex-7b-v1](https://huggingface.co/nvidia/personaplex-7b-v1)\n",
     "2. ✅ Ten tu HuggingFace token listo\n",
-    "3. ✅ Asegúrate de estar en Runtime → GPU T4\n",
+    "3. ✅ Selecciona Runtime → **L4 GPU o superior**\n",
     "\n",
     "---"
    ]
@@ -51,8 +56,15 @@
     "import torch\n",
     "print(f\"\\n✅ CUDA available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
-    "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"VRAM: {torch.cuda.get_device_properties(0).total_mem / 1024**3:.1f} GB\")"
+    "    gpu_name = torch.cuda.get_device_name(0)\n",
+    "    vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3\n",
+    "    print(f\"GPU: {gpu_name}\")\n",
+    "    print(f\"VRAM: {vram_gb:.1f} GB\")\n",
+    "    if vram_gb < 20:\n",
+    "        print(f\"\\n⚠️  {gpu_name} tiene solo {vram_gb:.0f}GB VRAM.\")\n",
+    "        print(\"   PersonaPlex necesita ~17GB. Se usará --cpu-offload.\")\n",
+    "        print(\"   Si la GPU tiene <16GB VRAM y el sistema <16GB RAM, puede fallar (OOM/Killed).\")\n",
+    "        print(\"   T4 (15GB) en Colab Free NO funciona. Usa L4 o superior.\")"
    ]
   },
   {
@@ -126,7 +138,7 @@
     "\n",
     "Primer test: usar el audio de prueba incluido con la voz NATF2 (femenina natural).\n",
     "\n",
-    "⚠️ Usamos `--cpu-offload` porque el T4 tiene 16GB VRAM y el modelo pesa ~14GB en FP16."
+    "⚠️ Usamos `--cpu-offload` si la GPU tiene <20GB VRAM."
    ]
   },
   {
@@ -136,15 +148,26 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "import torch\n",
+    "vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3 if torch.cuda.is_available() else 0\n",
+    "offload = \"--cpu-offload\" if vram_gb < 20 else \"\"\n",
+    "print(f\"GPU VRAM: {vram_gb:.0f}GB → {'cpu-offload ON' if offload else 'full GPU'}\")\n",
+    "\n",
     "!python -m moshi.offline \\\n",
     "    --voice-prompt \"NATF2.pt\" \\\n",
     "    --input-wav \"assets/test/input_assistant.wav\" \\\n",
     "    --seed 42424242 \\\n",
     "    --output-wav \"output_assistant.wav\" \\\n",
     "    --output-text \"output_assistant.json\" \\\n",
-    "    --cpu-offload\n",
+    "    {offload} 2>&1\n",
     "\n",
-    "print(\"\\n✅ Audio generado: output_assistant.wav\")"
+    "import os\n",
+    "if os.path.exists(\"output_assistant.wav\"):\n",
+    "    print(f\"\\n✅ Audio generado: output_assistant.wav ({os.path.getsize('output_assistant.wav')} bytes)\")\n",
+    "else:\n",
+    "    print(\"\\n❌ FALLÓ: output_assistant.wav no fue generado.\")\n",
+    "    print(\"   Probable causa: OOM. Esta GPU no tiene suficiente memoria.\")\n",
+    "    print(\"   Solución: Usar una GPU con ≥20GB VRAM (L4, A100) o probar localmente con personaplex-mlx.\")"
    ]
   },
   {
@@ -160,19 +183,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Audio, display, JSON\n",
+    "import os\n",
+    "from IPython.display import Audio, display\n",
     "import json\n",
     "\n",
     "print(\"🎧 Audio de entrada (lo que 'escuchó' PersonaPlex):\")\n",
     "display(Audio(\"assets/test/input_assistant.wav\"))\n",
     "\n",
-    "print(\"\\n🎙️ Respuesta de PersonaPlex:\")\n",
-    "display(Audio(\"output_assistant.wav\"))\n",
+    "if os.path.exists(\"output_assistant.wav\"):\n",
+    "    print(\"\\n🎙️ Respuesta de PersonaPlex (24kHz):\")\n",
+    "    display(Audio(\"output_assistant.wav\", rate=24000))\n",
+    "else:\n",
+    "    print(\"\\n❌ No hay audio de salida — la generación falló. Ver celda anterior.\")\n",
     "\n",
-    "print(\"\\n📝 Transcripción de la respuesta:\")\n",
-    "with open(\"output_assistant.json\") as f:\n",
-    "    transcript = json.load(f)\n",
-    "    print(json.dumps(transcript, indent=2))"
+    "if os.path.exists(\"output_assistant.json\"):\n",
+    "    print(\"\\n📝 Transcripción de la respuesta:\")\n",
+    "    with open(\"output_assistant.json\") as f:\n",
+    "        transcript = json.load(f)\n",
+    "        print(json.dumps(transcript, indent=2))\n",
+    "else:\n",
+    "    print(\"\\n📝 No hay transcripción disponible.\")"
    ]
   },
   {
@@ -191,6 +221,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "import torch, os\n",
+    "vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3 if torch.cuda.is_available() else 0\n",
+    "offload = \"--cpu-offload\" if vram_gb < 20 else \"\"\n",
+    "\n",
     "!python -m moshi.offline \\\n",
     "    --voice-prompt \"NATM1.pt\" \\\n",
     "    --text-prompt \"$(cat assets/test/prompt_service.txt)\" \\\n",
@@ -198,9 +232,12 @@
     "    --seed 42424242 \\\n",
     "    --output-wav \"output_service.wav\" \\\n",
     "    --output-text \"output_service.json\" \\\n",
-    "    --cpu-offload\n",
+    "    {offload} 2>&1\n",
     "\n",
-    "print(\"\\n✅ Audio generado: output_service.wav\")"
+    "if os.path.exists(\"output_service.wav\"):\n",
+    "    print(f\"\\n✅ Audio generado: output_service.wav ({os.path.getsize('output_service.wav')} bytes)\")\n",
+    "else:\n",
+    "    print(\"\\n❌ FALLÓ: output_service.wav no fue generado (OOM probable).\")"
    ]
   },
   {
@@ -209,16 +246,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "from IPython.display import Audio, display\n",
+    "import json\n",
+    "\n",
     "print(\"🎧 Audio de entrada (cliente):\")\n",
     "display(Audio(\"assets/test/input_service.wav\"))\n",
     "\n",
-    "print(\"\\n🎙️ Respuesta de PersonaPlex (agente):\")\n",
-    "display(Audio(\"output_service.wav\"))\n",
+    "if os.path.exists(\"output_service.wav\"):\n",
+    "    print(\"\\n🎙️ Respuesta de PersonaPlex (agente):\")\n",
+    "    display(Audio(\"output_service.wav\", rate=24000))\n",
+    "else:\n",
+    "    print(\"\\n❌ No hay audio de salida.\")\n",
     "\n",
-    "print(\"\\n📝 Transcripción:\")\n",
-    "with open(\"output_service.json\") as f:\n",
-    "    transcript = json.load(f)\n",
-    "    print(json.dumps(transcript, indent=2))"
+    "if os.path.exists(\"output_service.json\"):\n",
+    "    print(\"\\n📝 Transcripción:\")\n",
+    "    with open(\"output_service.json\") as f:\n",
+    "        transcript = json.load(f)\n",
+    "        print(json.dumps(transcript, indent=2))\n",
+    "else:\n",
+    "    print(\"\\n📝 No hay transcripción disponible.\")"
    ]
   },
   {
@@ -236,11 +283,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "voices_to_test = [\"NATF0\", \"NATF2\", \"NATM0\", \"NATM2\", \"VARF1\", \"VARM1\"]\n",
-    "\n",
-    "import subprocess, json\n",
+    "import subprocess, json, os, torch\n",
     "from IPython.display import Audio, display\n",
     "\n",
+    "vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3 if torch.cuda.is_available() else 0\n",
+    "offload_args = [\"--cpu-offload\"] if vram_gb < 20 else []\n",
+    "\n",
+    "voices_to_test = [\"NATF0\", \"NATF2\", \"NATM0\", \"NATM2\", \"VARF1\", \"VARM1\"]\n",
     "results = {}\n",
     "\n",
     "for voice in voices_to_test:\n",
@@ -258,21 +307,21 @@
     "        \"--seed\", \"42424242\",\n",
     "        \"--output-wav\", out_wav,\n",
     "        \"--output-text\", out_json,\n",
-    "        \"--cpu-offload\"\n",
-    "    ], capture_output=True, text=True)\n",
+    "    ] + offload_args, capture_output=True, text=True)\n",
     "    \n",
-    "    if result.returncode == 0:\n",
+    "    if result.returncode == 0 and os.path.exists(out_wav):\n",
     "        print(f\"✅ {voice} completado\")\n",
-    "        display(Audio(out_wav))\n",
+    "        display(Audio(out_wav, rate=24000))\n",
     "        \n",
-    "        with open(out_json) as f:\n",
-    "            transcript = json.load(f)\n",
-    "            results[voice] = transcript\n",
-    "            print(f\"📝 {json.dumps(transcript, indent=2)[:300]}\")\n",
+    "        if os.path.exists(out_json):\n",
+    "            with open(out_json) as f:\n",
+    "                transcript = json.load(f)\n",
+    "                results[voice] = transcript\n",
+    "                print(f\"📝 {json.dumps(transcript, indent=2)[:300]}\")\n",
     "    else:\n",
-    "        print(f\"❌ Error con {voice}: {result.stderr[:200]}\")\n",
+    "        print(f\"❌ Error con {voice}: {result.stderr[:300] if result.stderr else 'Killed (OOM)'}\")\n",
     "\n",
-    "print(f\"\\n\\n🏁 Voces probadas: {len(results)}/{len(voices_to_test)}\")"
+    "print(f\"\\n\\n🏁 Voces completadas: {len(results)}/{len(voices_to_test)}\")"
    ]
   },
   {
@@ -313,7 +362,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# Usar el audio de servicio como input (simula un cliente llamando)\n",
+    "import torch, os\n",
+    "vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3 if torch.cuda.is_available() else 0\n",
+    "offload = \"--cpu-offload\" if vram_gb < 20 else \"\"\n",
+    "\n",
     "!python -m moshi.offline \\\n",
     "    --voice-prompt \"NATF2.pt\" \\\n",
     "    --text-prompt \"$(cat custom_prompt.txt)\" \\\n",
@@ -321,9 +373,12 @@
     "    --seed 42424242 \\\n",
     "    --output-wav \"output_callbot.wav\" \\\n",
     "    --output-text \"output_callbot.json\" \\\n",
-    "    --cpu-offload\n",
+    "    {offload} 2>&1\n",
     "\n",
-    "print(\"\\n✅ Callbot test completado\")"
+    "if os.path.exists(\"output_callbot.wav\"):\n",
+    "    print(f\"\\n✅ Callbot test completado ({os.path.getsize('output_callbot.wav')} bytes)\")\n",
+    "else:\n",
+    "    print(\"\\n❌ FALLÓ (OOM probable).\")"
    ]
   },
   {
@@ -332,13 +387,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"🎙️ Respuesta del callbot:\")\n",
-    "display(Audio(\"output_callbot.wav\"))\n",
+    "import os\n",
+    "from IPython.display import Audio, display\n",
+    "import json\n",
     "\n",
-    "print(\"\\n📝 Transcripción:\")\n",
-    "with open(\"output_callbot.json\") as f:\n",
-    "    transcript = json.load(f)\n",
-    "    print(json.dumps(transcript, indent=2))"
+    "if os.path.exists(\"output_callbot.wav\"):\n",
+    "    print(\"🎙️ Respuesta del callbot:\")\n",
+    "    display(Audio(\"output_callbot.wav\", rate=24000))\n",
+    "else:\n",
+    "    print(\"❌ No hay audio de salida.\")\n",
+    "\n",
+    "if os.path.exists(\"output_callbot.json\"):\n",
+    "    print(\"\\n📝 Transcripción:\")\n",
+    "    with open(\"output_callbot.json\") as f:\n",
+    "        transcript = json.load(f)\n",
+    "        print(json.dumps(transcript, indent=2))\n",
+    "else:\n",
+    "    print(\"📝 No hay transcripción disponible.\")"
    ]
   },
   {
@@ -356,12 +421,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time, os, subprocess\n",
+    "import time, os, subprocess, torch\n",
+    "\n",
+    "vram_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3 if torch.cuda.is_available() else 0\n",
+    "offload_args = [\"--cpu-offload\"] if vram_gb < 20 else []\n",
     "\n",
     "print(\"📊 Benchmark: Latencia de generación offline\")\n",
     "print(\"=\"*50)\n",
     "\n",
-    "# Medir tiempo de una generación\n",
     "start = time.time()\n",
     "result = subprocess.run([\n",
     "    \"python\", \"-m\", \"moshi.offline\",\n",
@@ -370,74 +437,35 @@
     "    \"--seed\", \"12345\",\n",
     "    \"--output-wav\", \"benchmark_output.wav\",\n",
     "    \"--output-text\", \"benchmark_output.json\",\n",
-    "    \"--cpu-offload\"\n",
-    "], capture_output=True, text=True)\n",
+    "] + offload_args, capture_output=True, text=True)\n",
     "elapsed = time.time() - start\n",
     "\n",
-    "# Duración del audio input\n",
-    "import wave\n",
-    "with wave.open(\"assets/test/input_assistant.wav\") as w:\n",
-    "    input_duration = w.getnframes() / w.getframerate()\n",
+    "if os.path.exists(\"benchmark_output.wav\"):\n",
+    "    import wave\n",
+    "    with wave.open(\"assets/test/input_assistant.wav\") as w:\n",
+    "        input_duration = w.getnframes() / w.getframerate()\n",
     "\n",
-    "with wave.open(\"benchmark_output.wav\") as w:\n",
-    "    output_duration = w.getnframes() / w.getframerate()\n",
+    "    with wave.open(\"benchmark_output.wav\") as w:\n",
+    "        output_duration = w.getnframes() / w.getframerate()\n",
     "\n",
-    "print(f\"⏱️  Tiempo total: {elapsed:.1f}s\")\n",
-    "print(f\"🎵 Duración input: {input_duration:.1f}s\")\n",
-    "print(f\"🎵 Duración output: {output_duration:.1f}s\")\n",
-    "print(f\"⚡ RTF (Real Time Factor): {elapsed/output_duration:.2f}x\")\n",
-    "print(f\"   (< 1.0 = más rápido que tiempo real)\")\n",
-    "\n",
-    "# GPU memory\n",
-    "!nvidia-smi --query-gpu=memory.used,memory.total --format=csv,noheader\n",
-    "\n",
-    "print(f\"\\n{'='*50}\")\n",
-    "print(\"📋 Resumen para PROJECT.md:\")\n",
-    "print(f\"   GPU: T4 16GB + cpu-offload\")\n",
-    "print(f\"   RTF: {elapsed/output_duration:.2f}x\")\n",
-    "print(f\"   Tiempo gen: {elapsed:.1f}s para {output_duration:.1f}s de audio\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 🔟 (Bonus) Servidor Web Interactivo\n",
-    "\n",
-    "⚠️ Solo funciona si tienes **micrófono** disponible (Colab con Chrome).\n",
-    "\n",
-    "Esto levanta el Web UI de PersonaPlex con interacción en tiempo real."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Descomenta para probar el servidor interactivo\n",
-    "# ⚠️ En Colab free, la sesión puede morir por timeout\n",
-    "# ⚠️ Necesita HTTPS para acceso al micrófono\n",
-    "\n",
-    "# import subprocess, threading\n",
-    "# \n",
-    "# def run_server():\n",
-    "#     subprocess.run([\n",
-    "#         \"python\", \"-m\", \"moshi.server\",\n",
-    "#         \"--ssl\", \"/tmp/ssl_certs\",\n",
-    "#         \"--cpu-offload\"\n",
-    "#     ])\n",
-    "# \n",
-    "# # Crear dir SSL\n",
-    "# !mkdir -p /tmp/ssl_certs\n",
-    "# \n",
-    "# # Lanzar en background\n",
-    "# thread = threading.Thread(target=run_server, daemon=True)\n",
-    "# thread.start()\n",
-    "# \n",
-    "# print(\"🌐 Servidor lanzado. Accede via:\")\n",
-    "# print(\"   https://localhost:8998\")\n",
-    "# print(\"   (O usa localtunnel/ngrok para acceso remoto)\")"
+    "    gpu_name = torch.cuda.get_device_name(0) if torch.cuda.is_available() else 'CPU'\n",
+    "    print(f\"⏱️  Tiempo total: {elapsed:.1f}s\")\n",
+    "    print(f\"🎵 Duración input: {input_duration:.1f}s\")\n",
+    "    print(f\"🎵 Duración output: {output_duration:.1f}s\")\n",
+    "    print(f\"⚡ RTF (Real Time Factor): {elapsed/output_duration:.2f}x\")\n",
+    "    print(f\"   (< 1.0 = más rápido que tiempo real)\")\n",
+    "    !nvidia-smi --query-gpu=memory.used,memory.total --format=csv,noheader\n",
+    "    print(f\"\\n{'='*50}\")\n",
+    "    print(\"📋 Resumen para PROJECT.md:\")\n",
+    "    print(f\"   GPU: {gpu_name} + {'cpu-offload' if offload_args else 'full GPU'}\")\n",
+    "    print(f\"   RTF: {elapsed/output_duration:.2f}x\")\n",
+    "    print(f\"   Tiempo gen: {elapsed:.1f}s para {output_duration:.1f}s de audio\")\n",
+    "else:\n",
+    "    print(f\"❌ Benchmark falló — no se generó audio.\")\n",
+    "    print(f\"   GPU: {torch.cuda.get_device_name(0) if torch.cuda.is_available() else 'N/A'}\")\n",
+    "    print(f\"   VRAM: {vram_gb:.0f}GB\")\n",
+    "    print(f\"   Resultado: OOM/Killed después de {elapsed:.0f}s\")\n",
+    "    print(f\"   Conclusión: Esta GPU no es suficiente para PersonaPlex.\")"
    ]
   },
   {
@@ -450,14 +478,19 @@
     "\n",
     "| Métrica | Valor |\n",
     "|---------|-------|\n",
-    "| GPU usada | T4 16GB |\n",
-    "| cpu-offload | Sí |\n",
+    "| GPU usada | *(llenar)* |\n",
+    "| cpu-offload | Sí/No |\n",
     "| RTF | *(llenar)* |\n",
     "| Calidad audio | *(evaluar subjetivamente)* |\n",
     "| Mejor voz femenina | *(llenar)* |\n",
     "| Mejor voz masculina | *(llenar)* |\n",
     "| Adherencia al prompt | *(evaluar)* |\n",
     "| Solo inglés | ✅ Confirmado |\n",
+    "\n",
+    "### ⚠️ Hallazgo: T4 Colab Free NO funciona\n",
+    "- T4 (15GB VRAM, ~12GB RAM) → Proceso `Killed` por OOM al cargar moshi (16.7GB)\n",
+    "- Mínimo requerido: GPU con ≥20GB VRAM o sistema con ≥24GB RAM para cpu-offload\n",
+    "- Alternativa local: personaplex-mlx en Apple Silicon (RAM unificada)\n",
     "\n",
     "### Próximos pasos:\n",
     "- [ ] Probar en Mac mini con personaplex-mlx (Fase 1, tarea 2)\n",
